Implement /fcm_token #18 @30m
