# project-related files/swagger.yaml
@@ -362,6 +362,33 @@ paths:
             type: "array"
             items:
               $ref: '#/definitions/Leaderboard'
+  /fcm_token:
+    post:
+      tags:
+        - "Volunteer-related information"
+      summary: "API to update the FCM token of the user"
+      description: ""
+      operationId: "fcm_token"
+      consumes:
+        - "application/json"
+      produces:
+        - "application/json"
+      parameters:
+        - name: "volunteer_id"
+          in: "path"
+          description: "ID of the volunteer"
+          required: true
+          type: "string"
+        - name: "fcm_token"
+          in: "path"
+          description: "FCM token retrieved from client"
+          required: true
+          type: "string"
+      responses:
+        200:
+          description: "Status is always 200 (Needs to be fixed)."
+          schema:
+            $ref: "#/definitions/Data"
 definitions:
   Activity:
     type: "object"
@@ -466,6 +493,11 @@ definitions:
     type: "object"
     properties:
       success:
+        type: "string"
+  Data:
+    type: "object"
+    properties:
+      data:
         type: "string"
   Wtf:
     type: "object"
